--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,11 @@ services:
       - ./backend:/usr/src/app
     ports:
       - 8000:8000
+  frontend:
+    build: ./frontend
+    depends_on:
+      - app
+    volumes:
+      - ./frontend:/usr/src/app
+    ports:
+      - 5173:5173
