--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.4",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
