--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   db:
+    container_name: postgres-db
     image: postgres:latest
     volumes:
       - ./data:/var/lib/postgresql/data
