--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.4",
+    "ag-grid-community": "^30.0.6",
+    "ag-grid-react": "^30.0.6",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
